# zipvar

./: LICENSE  README.md  pyproject.toml  setup.py
tests/: benchmark_zipvar.py  test_zipvar.py
zipvar/: __init__.py  _zipvarmodule.c  pyzipvar.py  zipvar.py
