[project]
name = "zipvar"
version = "0.9.1"
requires-python = ">=3.0"
authors = [
    {name="Sebastian Gössl", email="goessl@student.tugraz.at"},
]
description = "The awkward middle child between zip and zip_longest."
readme = "README.md"
license = {text="MIT", files=["LICEN[CS]E"], expression="MIT"}
keywords = ["iterator", "iterators", "iterables", "generator", "generators",
        "itertools", "more-itertools", "zip", "zip_longest",
        "unequal", "different", "size", "length"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.0",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities"
]

[project.urls]
Repository = "https://github.com/goessl/zipvar.git"
